examples/rejections/canisters/rejections/rejections.did
type ManualReply = variant {
  NoError;
  CanisterError;
  SysTransient;
  DestinationInvalid;
  Unknown;
  SysFatal;
  CanisterReject;
};
service : () -> {
  getRejectionCodeCanisterError : () -> (ManualReply);
  getRejectionCodeCanisterReject : () -> (ManualReply);
  getRejectionCodeDestinationInvalid : () -> (ManualReply);
  getRejectionCodeNoError : () -> (ManualReply);
  getRejectionMessage : (text) -> (text);
}